--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -3,4 +3,5 @@
     <dimen name="icon_container_size">28dp</dimen>
     <dimen name="icon_size">16dp</dimen>
     <dimen name="card_elevation">8dp</dimen>
+    <dimen name="subcategory_padding">60dp</dimen>
 </resources>
