--- a/app/src/main/res/values/dimens.xml
+++ b/app/src/main/res/values/dimens.xml
@@ -4,4 +4,6 @@
     <dimen name="icon_size">16dp</dimen>
     <dimen name="card_elevation">8dp</dimen>
     <dimen name="subcategory_padding">60dp</dimen>
+    <dimen name="expense_icon_size">48dp</dimen>
+    <dimen name="editable_text_vertical_padding">10dp</dimen>
 </resources>
